SUBDIRS = unit regression

EXTRA_DIST = \
	compare_table.pl \
	testfuncs_cygwin.sh \
	word_align.pl \
	data/an4_ci_cont/feat.params \
	data/an4_ci_cont/mdef \
	data/an4_ci_cont/means \
	data/an4_ci_cont/mixture_weights \
	data/an4_ci_cont/noisedict \
	data/an4_ci_cont/transition_matrices \
	data/an4_ci_cont/variances \
	data/cards/001.wav \
	data/cards/002.wav \
	data/cards/003.wav \
	data/cards/004.wav \
	data/cards/005.wav \
	data/cards/cards.fileids \
	data/cards/cards.gram \
	data/cards/cards.hyp \
	data/cards/cards.transcription \
	data/defective.gram \
	data/defective.dic \
	data/goforward.fsg \
	data/goforward.gram \
	data/goforward.raw \
	data/mllr_matrices \
	data/numbers.raw \
	data/something.raw \
	data/test.lmctl \
	data/tidigits/dhd.2934z.raw \
	data/tidigits/man.ah.111a.mfc \
	data/tidigits/man.ah.1b.mfc \
	data/tidigits/man.ah.2934za.mfc \
	data/tidigits/man.ah.35oa.mfc \
	data/tidigits/man.ah.3oa.mfc \
	data/tidigits/man.ah.4625a.mfc \
	data/tidigits/man.ah.588zza.mfc \
	data/tidigits/man.ah.63a.mfc \
	data/tidigits/man.ah.6o838a.mfc \
	data/tidigits/man.ah.75913a.mfc \
	data/tidigits/man.ah.844o1a.mfc \
	data/tidigits/man.ah.8b.mfc \
	data/tidigits/man.ah.9b.mfc \
	data/tidigits/man.ah.o789a.mfc \
	data/tidigits/man.ah.z4548a.mfc \
	data/tidigits/man.ah.zb.mfc \
	data/tidigits/test-tidigits-fsg.match \
	data/tidigits/test-tidigits-simple.match \
	data/tidigits/tidigits.ctl \
	data/tidigits/tidigits.lsn \
	data/tidigits/woman.ak.1b.mfc \
	data/tidigits/woman.ak.276317oa.mfc \
	data/tidigits/woman.ak.334a.mfc \
	data/tidigits/woman.ak.3z3z9a.mfc \
	data/tidigits/woman.ak.48z66zza.mfc \
	data/tidigits/woman.ak.532a.mfc \
	data/tidigits/woman.ak.5z874a.mfc \
	data/tidigits/woman.ak.6728za.mfc \
	data/tidigits/woman.ak.75a.mfc \
	data/tidigits/woman.ak.84983a.mfc \
	data/tidigits/woman.ak.8a.mfc \
	data/tidigits/woman.ak.99731a.mfc \
	data/tidigits/woman.ak.o69a.mfc \
	data/tidigits/woman.ak.ooa.mfc \
	data/tidigits/woman.ak.za.mfc \
	data/turtle.dic \
	data/unreachable.lat \
	data/wsj/440c0201.mfc \
	data/wsj/441c0201.mfc \
	data/wsj/442c0201.mfc \
	data/wsj/443c0201.mfc \
	data/wsj/444c0201.mfc \
	data/wsj/446c0201.mfc \
	data/wsj/447c0201.mfc \
	data/wsj/n800_440c0201.wav \
	data/wsj/n800_440c0202.wav \
	data/wsj/n800_440c0203.wav \
	data/wsj/n800_440c0204.wav \
	data/wsj/n800_440c0205.wav \
	data/wsj/n800_440c0206.wav \
	data/wsj/n800_440c0207.wav \
	data/wsj/s1.mllr \
	data/wsj/test-hub4-n800-fwdtree.match \
	data/wsj/test-hub4-simple-pl.match \
	data/wsj/test-hub4-simple.match \
	data/wsj/test5k.n800.ctl \
	data/wsj/test5k.n800.lsn \
	data/wsj/test5k.s1.ctl \
	data/wsj/test5k.s1.lsn
