enlmdir = $(datadir)/@PACKAGE@/model/lm/en
dist_enlm_DATA = en/tidigits.dic			\
	en/tidigits.DMP				\
	en/tidigits.fsg				\
	en/turtle.dic				\
	en/turtle.DMP

enuslmdir = $(datadir)/@PACKAGE@/model/lm/en_US
dist_enuslm_DATA = \
	en_US/cmu07a.dic			\
	en_US/hub4.5000.DMP			\
	en_US/hub4.5000.dic			\
	en_US/wsj0vp.5000.DMP

zhcnlmdir = $(datadir)/@PACKAGE@/model/lm/zh_CN
dist_zhcnlm_DATA = \
	zh_CN/gigatdt.5000.DMP			\
	zh_CN/mandarin_notone.dic

zhtwlmdir = $(datadir)/@PACKAGE@/model/lm/zh_TW
dist_zhtwlm_DATA = \
	zh_TW/gigatdt.5000.DMP			\
	zh_TW/mandarin_notone.dic
